--- a/HisOrder.html
+++ b/HisOrder.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.green.min.css" integrity="sha512-C8Movfk6DU/H5PzarG0+Dv9MA9IZzvmQpO/3cIlGIflmtY3vIud07myMu4M/NTPJl8jmZtt/4mC9bAioMZBBdA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
- <title>Porfumelus</title>
+ <title>Havuyi</title>
  
 </head>
 <body>
@@ -34,7 +34,7 @@
 					</ul>
 			</div>
 			<div class="nav__center">
-				<div class="nav__logo--icon"></div>
+				<div class="nav__logo--icon"><img src="img/logo.png" alt="logo" class="nav__logo--icon"></div>
 				<div class="nav__logo--name">Havuyi</div>
 			</div>
 			</div>
