--- a/Ordertt.html
+++ b/Ordertt.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Link CSS -->
-	<link rel="stylesheet" href="orderpage.css">
+	<link rel="stylesheet" href="ordertt.css">
 	<link rel="stylesheet" href="./HeaderFooter.css">
 	<!-- Fontawesome -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -100,15 +100,15 @@
 
 			</div>
 			<div class="orderpage-button">
-				<button class="check-shipping-info" id="myBtn"><a href="Ordertt.html">Kiểm tra thông tin vận chuyển</a></button>
-				<button class="checkout"><a href="indexdangnhap.html">Thanh toán</a></button>
+				<button class="check-shipping-info" id="myBtn">Kiểm tra thông tin vận chuyển</button>
+				<button class="checkout">Thanh toán</button>
 			</div>
 		</div>
 
-		<div id="my_shipping_modal" class="modal">
+		<div id="my_shipping_modal" class="modal" style="display: block;">
 			<!-- Modal content -->
-			<div class="modal-content">
-				<span class="close">&times;</span>
+			<div class="modal-content" >
+				<a href="Orderpage.html"><span class="close">&times;</span></a>
 				<h2>Kiểm tra thông tin vận chuyển</h2>
 				<div class="info">
 					<label for="name"><b>Họ và tên</b></label>
@@ -124,7 +124,7 @@
 
 				<small>Xin hãy xem xét cẩn thận thông tin vận chuyển kẻo gặp lỗi khi vận chuyển nha</small>
 
-				<button class="save">Lưu thông tin</button>
+				<a href="Orderpage.html"><button class="save">Lưu thông tin</button></a>
 			</div>
 		</div>
 	</div>
