--- a/detailgiam.html
+++ b/detailgiam.html
@@ -178,7 +178,7 @@
                             <a href="ProductDetail3.html">	<button class="product__size--btn">150ml</button></a>
 						</div>
 						<div class="product__amount--box">
-							<a href="detailgiam.html">	<button class="product__amount--minus">-</button></a>
+                            <a href="detailgiam.html">	<button class="product__amount--minus">-</button></a>
 							<div ><input class="product__amount--number" type="text" value="1"></div>
 							<a href="detailtang.html"><button class="product__amount--add">+</button></a>
 						</div>
@@ -306,7 +306,8 @@
 		<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
 	</div>
 </div>
-<!-- <script  src="index.js"></script>-->
+<!-- <script  src="index.js"></script>
+<script src="detail.js"></script> -->
 <script src="detail.js"></script> 
 </body>
 
