--- a/detailtang.html
+++ b/detailtang.html
@@ -173,13 +173,13 @@
 					</div>
 					<div class="child">
 						<div class="product__size--box">
-							<a href="ProductDetail.html"><button class="product__size--btn active">50ml</button></a>
+							<a href="ProductDetail.html"><button class="product__size--btn active">50ml</button>
                             <a href="ProductDetail2.html">	<button class="product__size--btn">100ml</button></a>
                             <a href="ProductDetail3.html">	<button class="product__size--btn">150ml</button></a>
 						</div>
 						<div class="product__amount--box">
 							<a href="detailgiam.html">	<button class="product__amount--minus">-</button></a>
-							<div ><input class="product__amount--number" type="text" value="1"></div>
+							<div ><input class="product__amount--number" type="text" value="2"></div>
 							<a href="detailtang.html"><button class="product__amount--add">+</button></a>
 						</div>
 					</div>
@@ -306,7 +306,8 @@
 		<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
 	</div>
 </div>
-<!-- <script  src="index.js"></script>-->
+<!-- <script  src="index.js"></script>
+<script src="detail.js"></script> -->
 <script src="detail.js"></script> 
 </body>
 
