--- a/index.html
+++ b/index.html
@@ -203,33 +203,40 @@
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
 						<h1>Theo hãng</h1>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Dior</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Louis Vulton</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Tom Ford</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Gucci</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Calvin Klein</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline brand ">Dior</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
 					</div>
 					<div class="product__filter--type">
 						<h1>Theo giới tính</h1>
-						<button class="product__filter--btn outline sex nam"><a href="button1.html">Nam</a></button>
-						<button class="product__filter--btn outline sex nu"><a href="button1.html">Nữ</a></button>
-						<button class="product__filter--btn outline sex"><a href="button1.html">Unisex</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline sex nam">Nam</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline sex nu">Nữ</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline sex">Unisex</button></a>
 					</div>
 					<div class="product__filter--price">
 						<h1>Theo giá</h1>
-						<button class="product__filter--btn outline orderedPrice"><a href="button1.html">Thấp nhất</a></button>
-						<button class="product__filter--btn outline orderedPrice"><a href="button1.html">Cao nhất</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Thấp nhất</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Cao nhất</button></a>
+						<select>
+							<option value="Dior">Dior</option>
+							<option value="Louis Vuitton">Louis Vuitton</option>
+							<option value="Tom Ford">Tom Ford</option>
+							<option value="Gucci">Gucci</option>
+							<option value="Calvin Klein">Calvin Klein</option>
+						</select>
 						<h3>Khoảng giá</h2>
 							<input class="product__filter--input outline from" type="text" placeholder="Từ">
 							<input class="product__filter--input outline to" type="text" placeholder="Đến">
-							<div class="findPrice"><a href="indexfind.html">Tìm Kiếm</a></div>
+							<a href="indexfind.html"><div class="findPrice">Tìm Kiếm</div></a>
 					</div>
 					<div class="product__filer--rating">
 						<h1>Theo đánh giá</h1>
-						<button class="product__filter--btn outline star"><a href="button1.html">4★-5★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">3★-4★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">2★-3★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">1★-2★</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline star">4★-5★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">3★-4★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">2★-3★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">1★-2★</button></a>
 					</div>
 				</div>
 				<div class="product__box">
