--- a/indexgiohang.html
+++ b/indexgiohang.html
@@ -346,14 +346,13 @@
                                 <div class="product__modal__cart__content__total__price">1.980.000đ</div>
                         </div>
                         <div class="product__modal__cart__content__checkout__viewcart">
-                            <div class="product__modal__cart__content__checkout__item checkout__button">
-
-                                <a href="Orderpage.html"><i class="fas fa-lock"></i>
-								 <h5>THANH TOÁN HÓA ĐƠN</h5></a>
-                            </div>
+                           <a href="Orderpage.html" style="width: 300px;"> <div class="product__modal__cart__content__checkout__item checkout__button" onclick="gotoorderpage()">
+                               <i class="fas fa-lock"></i> <h5>THANH TOÁN HÓA ĐƠN</h5>
+                            </div></a>
+							<a href="HisOrder.html"style="width: 300px;">
                             <div class="product__modal__cart__content__viewcart__item viewcart__item" onclick="clickToViewOrder()">
                                 <i class="fas fa-shopping-cart"></i> <h5>XEM CÁC ĐƠN HÀNG ĐÃ ĐẶT</h5>
-                            </div>
+                            </div></a>
                         </div>
 				</div>
 			</div>
