--- a/button2.html
+++ b/button2.html
@@ -84,11 +84,11 @@
 					<div class="nav__logo--icon"> <img src="img/logo.png" alt="logo" class="nav__logo--icon"></div>
 					<div class="nav__logo--name">Havuyi</div>
 				</div>
-				<form class="nav__search outline" onsubmit="return false;">
+			
 					<input class="nav__search--input" type="text" placeholder="Tìm kiếm sản phẩm...">
-					<button class="nav__search--btn outline" type="submit"><img src="svg/magnifying_glass.svg"
-							width="22px" height="22px"></img></i></button>
-				</form>
+					<a href="indexfind.html"><button class="nav__search--btn outline" type="submit"><img src="svg/magnifying_glass.svg"
+						width="22px" height="22px"></button></a>
+				
 				<div class="nav__cart"><img src="svg/cart.svg" width="39px" height="39px"></img></div>
 			</div>
 		</div>
@@ -205,33 +205,33 @@
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
 						<h1>Theo hãng</h1>
-						<button class="product__filter--btn outline brand active"><a href="button1.html">Dior</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Louis Vulton</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Tom Ford</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Gucci</a></button>
-						<button class="product__filter--btn outline brand"><a href="button1.html">Calvin Klein</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline brand active">Dior</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
 					</div>
 					<div class="product__filter--type">
 						<h1>Theo giới tính</h1>
-						<button class="product__filter--btn outline sex nam"><a href="button1.html">Nam</a></button>
-						<button class="product__filter--btn outline sex nu"><a href="button1.html">Nữ</a></button>
-						<button class="product__filter--btn outline sex"><a href="button1.html">Unisex</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline sex nam">Nam</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline sex nu">Nữ</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline sex">Unisex</button></a>
 					</div>
 					<div class="product__filter--price">
 						<h1>Theo giá</h1>
-						<button class="product__filter--btn outline orderedPrice"><a href="button1.html">Thấp nhất</a></button>
-						<button class="product__filter--btn outline orderedPrice"><a href="button1.html">Cao nhất</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Thấp nhất</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Cao nhất</button></a>
 						<h3>Khoảng giá</h2>
 							<input class="product__filter--input outline from" type="text" placeholder="Từ">
 							<input class="product__filter--input outline to" type="text" placeholder="Đến">
-							<div class="findPrice">Tìm Kiếm</div>
+							<a href="indexfind.html"><div class="findPrice">Tìm Kiếm</div></a>
 					</div>
 					<div class="product__filer--rating">
 						<h1>Theo đánh giá</h1>
-						<button class="product__filter--btn outline star"><a href="button1.html">4★-5★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">3★-4★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">2★-3★</a></button>
-						<button class="product__filter--btn outline star"><a href="button1.html">1★-2★</a></button>
+						<a href="button1.html">	<button class="product__filter--btn outline star">4★-5★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">3★-4★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">2★-3★</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline star">1★-2★</button></a>
 					</div>
 				</div>
 				<div class="product__box">
