--- a/dangky.html
+++ b/dangky.html
@@ -122,7 +122,7 @@
 	<!-- Phần đăng ký -->
 	<div class="modal_signup">
 		<div class="modal-signup-content">
-			<div class="closeiconDangky"><i class="fa-solid fa-x"></i></div>
+			<div class="closeiconDangky"><a href="index.html"><i class="fa-solid fa-x"></i></a></div>
 			<h2 class="signup">Đăng ký</h2>
 			<form class="form_signup">
 				<div class="form-content">
@@ -159,7 +159,7 @@
 						<div class="er errorAddress">Lỗi</div>
 					</div>
 					<div class="input-box">
-						<button class="signup-button"><a href="indexdangnhap.html">Đăng ký</a></button>
+						<button class="signup-button" onclick="returnn()">Đăng ký	</button>
 					</div>
 				</div>
 				<br>
@@ -389,6 +389,7 @@
 	<!-- Footer ENDS -->
 	<!-- <script src="index.js"></script>
 	<script src="index1.js"></script> -->
+	<script src="dangky.js"></script>
 </body>
 
 </html>
