--- a/indexdangnhap.html
+++ b/indexdangnhap.html
@@ -41,10 +41,10 @@
 		<div class="nav">
 			<div class="nav__link">
 				<ul>
-					<li><a href="index.html">Trang Chủ</a></li>
-					<li><a>Giới Thiệu</a></li>
-					<li><a>Bảo Hành</a></li>
-					<li><a>Liên Hệ</a></li>
+					<li><a href="indexdangnhap.html">Trang Chủ</a></li>
+					<li><a href="gioithieu.html">Giới Thiệu</a></li>
+					<li><a href="baohanh.html">Bảo Hành</a></li>
+					<li><a href="lienhe.html">Liên Hệ</a></li>
 				</ul>
 				<ul>
 					<div class="user">
