--- a/admin/timsp.html
+++ b/admin/timsp.html
@@ -48,12 +48,17 @@
             </ul>
             
             <ul class="logout-mode">
-                <li><a href="../index.html">
-                    <i class="uil uil-signout"></i>
-                    <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
-                </a></li>
-            </li>
-            </ul>
+              <li><a href="../index.html">
+                      <i class="uil uil-signout"></i>
+                      <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
+                  </a>
+              </li><br>
+              <li><a href="admin.html" style="color: gray;">
+                  <i class="uil uil-signout"></i>
+                  <span class="backhome" style="cursor: pointer;">Trở về trang tổng quan</span>
+              </a>
+          </li>
+          </ul>
         </div>
     </nav>
     <section class="menuadmin dashboard">
@@ -245,7 +250,7 @@
                   </select> -->
         </div>
         <!-- <i class="fa-thin fa-magnifying-glass"></i> -->
-        <div class="ket-qua">kết quả tìm thấy</div>
+        <div class="ket-qua">Kết quả tìm thấy</div>
         <table class="tables">
           <thead>
             <tr class="column">
