--- a/ProductDetail2.html
+++ b/ProductDetail2.html
@@ -29,7 +29,7 @@
 			<div class="nav">
 				<div class="nav__link">
 					<ul>
-						<li><a>Trang Chủ</a></li>
+						<li><a href="index.html">Trang Chủ</a></li>
 						<li><a>Giới Thiệu</a></li>
 						<li><a>Bảo Hành</a></li>
 						<li><a>Liên Hệ</a></li>
@@ -162,7 +162,7 @@
 					<img class="product__img" src="img/img2.jpg"></img>
 				</div>
 				<div class="product__right parent">
-					<div class="product__price">727.000đ-1.727.000đ</div>
+					<div class="product__price">1.272.000đ</div>
 					<div class="product__rating">★★★★★</div>
 					<div class="product__brand">Thương hiệu: Louis Vuitton</div>
 					<div class="product__sex">Giới tính: Unisex</div>
