--- a/admin/suasanpham.html
+++ b/admin/suasanpham.html
@@ -48,12 +48,17 @@
             </ul>
             
             <ul class="logout-mode">
-                <li><a href="../index.html">
-                    <i class="uil uil-signout"></i>
-                    <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
-                </a></li>
-            </li>
-            </ul>
+              <li><a href="../index.html">
+                      <i class="uil uil-signout"></i>
+                      <span class="backhome" style="cursor: pointer;">Trở về trang chủ</span>
+                  </a>
+              </li><br>
+              <li><a href="admin.html" style="color: gray;">
+                  <i class="uil uil-signout"></i>
+                  <span class="backhome" style="cursor: pointer;">Trở về trang tổng quan</span>
+              </a>
+          </li>
+          </ul>
         </div>
     </nav>
     <section class="menuadmin dashboard">
