--- a/binhluan.html
+++ b/binhluan.html
@@ -29,7 +29,7 @@
 			<div class="nav">
 				<div class="nav__link">
 					<ul>
-						<li><a href="index.html">Trang Chủ</a></li>
+						<li><a>Trang Chủ</a></li>
 						<li><a>Giới Thiệu</a></li>
 						<li><a>Bảo Hành</a></li>
 						<li><a>Liên Hệ</a></li>
@@ -162,7 +162,7 @@
 					<img class="product__img" src="img/img2.jpg"></img>
 				</div>
 				<div class="product__right parent">
-					<div class="product__price">1.727.000đ</div>
+					<div class="product__price">727.000đ</div>
 					<div class="product__rating">★★★★★</div>
 					<div class="product__brand">Thương hiệu: Louis Vuitton</div>
 					<div class="product__sex">Giới tính: Unisex</div>
@@ -173,9 +173,9 @@
 					</div>
 					<div class="child">
 						<div class="product__size--box">
-							<a href="ProductDetail.html"><button class="product__size--btn ">50ml</button></a>
+							<a href="ProductDetail.html"><button class="product__size--btn active">50ml</button></a>
                             <a href="ProductDetail2.html">	<button class="product__size--btn">100ml</button></a>
-                            <a href="ProductDetail3.html">	<button class="product__size--btn active">150ml</button></a>
+                            <a href="ProductDetail3.html">	<button class="product__size--btn">150ml</button></a>
 						</div>
 						<div class="product__amount--box">
 							<a href="detailgiam.html">	<button class="product__amount--minus">-</button></a>
@@ -192,12 +192,15 @@
 		</div>
 		<div class="accordion">
 			<div class="top">
-				<div class="description">Chi tiết sản phẩm</div>
-				<div class="review grayout">Đánh giá và bình luận</div>
+				<a href="ProductDetail.html"><div class="review grayout">Chi tiết sản phẩm</div></a>
+				<a href="binhluan.html">
+				<div class="description">Đánh giá và bình luận</div></a>
 				</div>
 			<div class="bottom">
-				<div class="description__content">Heures d’Absence, được ra mắt vào năm 1927, lấy tên từ một biệt thự của gia đình Vuitton tại vùng Seine-et-Marne. Hương của nước hoa Heures d’Absence ban đầu mang trong mình tinh thần khám phá thế giới thông qua các phương tiện vận tải tiên tiến, ví dụ như máy bay. Chiếc máy bay này đã gây ngạc nhiên khi lần đầu xuất hiện, nhưng nhanh chóng thay đổi cách con người du lịch.
-					Nhiều năm trôi qua, mùi hương nguyên thủy này dần phai nhạt. Bản ghi chép về thành phần hương nước hoa đã biến mất, không ai có thể nhớ lại chính xác mùi hương của Heures d’Absence. Gần một thế kỷ đã trôi qua kể từ khi lọ nước hoa Heures d’Absence lần đầu tiên xuất hiện lại vào năm 2020. Và bây giờ, Louis Vuitton tái ngộ với hương nước hoa này một lần nữa. Phiên bản mới mang một mùi hương tao nhã, lấy cảm hứng từ quá khứ nhưng không bị ràng buộc.’)
+				<div class="description__content"><b>Con gà con:</b> Sản phẩm rất tốt, tôi cho 5 sao. <b>Đánh giá:★★★★★</b><br>
+                    <b>Con chim non:</b> Trang web uy tín, sản phẩm chất lượng. <b>Đánh giá:★★★★</b><br>
+                    <b>Con mắt:</b> Trang web đẹp mắt, dễ dàng đặt hàng và mua hàng. <b>Đánh giá:★★★★★</b><br>
+                    <b>Con nhà người ta:</b> Sản phẩm này bị lỗi. <b>Đánh giá:★</b><br>
 					</div>
 				<div class="review__content">
 					<div class="review__content--box">
@@ -220,21 +223,21 @@
 			<h2>Những sản phẩm tương tự</h2>
 			<div class="box">
 				<div class="product__item outline"><a href="ProductDetail.html">
-					<div class="product__item--img"><img src="img/img31.jpg"></div>
+					<div class="product__item--img"><img src="img/img3.jpg"></div>
 					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
 				</a></div>
 				<div class="product__item outline"><a href="ProductDetail.html">
-					<div class="product__item--img"><img src="img/img29.jpg"></div>
+					<div class="product__item--img"><img src="img/img5.jpg"></div>
 					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
 					<div class="product__item--rating ">★★★★★</div>
 				</a></div>
 				<div class="product__item outline"><a href="ProductDetail.html">
-					<div class="product__item--img"><img src="img/img25.jpg"></div>
+					<div class="product__item--img"><img src="img/img7.jpg"></div>
 					<div class="product__item--name">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
 					<div class="product__item--price">727.000đ-1.727.000đ</div>
 					<div class="product__item--size">3 size</div>
@@ -255,7 +258,6 @@
 					</div>
 			</div>
 			<div class="product__modal__cart__content">
-				Cart modal render by js
 			</div>
 		</div>
 	</div>
@@ -307,8 +309,7 @@
 		<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
 	</div>
 </div>
-<!-- <script  src="index.js"></script>
-<script src="detail.js"></script> -->
+<!-- <script  src="index.js"></script>-->
 <script src="detail.js"></script> 
 </body>
 
