--- a/button1.html
+++ b/button1.html
@@ -202,7 +202,7 @@
 			<div class="child">
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
-						<h1>Theo hãng</h1>
+						<h1 style="margin-top: 50px;">Theo hãng</h1>
 						<a href="button1.html">	<button class="product__filter--btn outline brand active">Dior</button></a>
 						<a href="button1.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
 						<a href="button1.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
