--- a/indexfind.html
+++ b/indexfind.html
@@ -202,7 +202,7 @@
 			<div class="child">
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
-						<h1>Theo hãng</h1>
+						<h1 style="margin-top: 50px;">Theo hãng</h1>
 						<button class="product__filter--btn outline brand"><a href="button1.html">Dior</a></button>
 						<button class="product__filter--btn outline brand"><a href="button1.html">Louis Vulton</a></button>
 						<button class="product__filter--btn outline brand"><a href="button1.html">Tom Ford</a></button>
