--- a/dangnhap.html
+++ b/dangnhap.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="trangchu.html">Trang chủ</a></li>
+        <li><a href="index.html">Trang chủ</a></li>
         <li><a href="gioithieu.html">Giới thiệu</a></li>
         <li><a href="dangnhap.html">Bảo hành</a></li>
         <li><a href="dangky.html">Liên hệ</a></li>
@@ -23,5 +23,6 @@
     <div class="content2" ><a href="indexdangnhap.html">Quên mật khẩu ?</a></div>
     <button class="content1"><a href="indexdangnhap.html">Đăng nhập</a></button> 
 </div>
+<script src="dangnhap.js"></script>
 </body>
 </html>
