--- a/indexdangnhap.html
+++ b/indexdangnhap.html
@@ -216,9 +216,21 @@
 						<a href="button1.html">	<button class="product__filter--btn outline sex">Unisex</button></a>
 					</div>
 					<div class="product__filter--price">
-						<h1>Theo giá</h1>
+						<h1 style="color: rgb(16, 94, 94);">Tìm kiếm nâng cao</h1>
 						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Thấp nhất</button></a>
 						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Cao nhất</button></a>
+						<h1 >Sắp xếp</h1>
+						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Thấp nhất</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline orderedPrice">Cao nhất</button></a>
+						<h1 style="color: rgb(16, 94, 94);">Tìm kiếm nâng cao</h1>
+						<h1>Phân loại </h1>
+						<div class="advan"><select>
+							<option value="Dior">Dior</option>
+							<option value="Louis Vuitton">Louis Vuitton</option>
+							<option value="Tom Ford">Tom Ford</option>
+							<option value="Gucci">Gucci</option>
+							<option value="Calvin Klein">Calvin Klein</option>
+						</select></div>
 						<h3>Khoảng giá</h2>
 							<input class="product__filter--input outline from" type="text" placeholder="Từ">
 							<input class="product__filter--input outline to" type="text" placeholder="Đến">
