--- a/detailtang.html
+++ b/detailtang.html
@@ -193,7 +193,8 @@
 		<div class="accordion">
 			<div class="top">
 				<div class="description">Chi tiết sản phẩm</div>
-				<div class="review grayout">Đánh giá và bình luận</div>
+				<a href="binhluan.html">
+					<div class="review grayout">Đánh giá và bình luận</div></a>
 				</div>
 			<div class="bottom">
 				<div class="description__content">Heures d’Absence, được ra mắt vào năm 1927, lấy tên từ một biệt thự của gia đình Vuitton tại vùng Seine-et-Marne. Hương của nước hoa Heures d’Absence ban đầu mang trong mình tinh thần khám phá thế giới thông qua các phương tiện vận tải tiên tiến, ví dụ như máy bay. Chiếc máy bay này đã gây ngạc nhiên khi lần đầu xuất hiện, nhưng nhanh chóng thay đổi cách con người du lịch.
