--- a/gucci.html
+++ b/gucci.html
@@ -203,10 +203,10 @@
 				<div class="product__filter outline">
 					<div class="product__filter--brand">
 						<h1 style="margin-top: 50px;">Theo hãng</h1>
-						<a href="button1.html">	<button class="product__filter--btn outline brand active">Dior</button></a>
+						<a href="button1.html">	<button class="product__filter--btn outline brand">Dior</button></a>
 						<a href="LV.html">	<button class="product__filter--btn outline brand">Louis Vulton</button></a>
-						<a href="Tom.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
-						<a href="gucci.html">	<button class="product__filter--btn outline brand">Gucci</button></a>
+						<a href="tom.html">	<button class="product__filter--btn outline brand">Tom Ford</button></a>
+						<a href="gucci.html">	<button class="product__filter--btn outline brand active">Gucci</button></a>
 						<a href="CK.html">	<button class="product__filter--btn outline brand">Calvin Klein</button></a>
 					</div>
 					<div class="product__filter--type">
@@ -234,15 +234,15 @@
 				</div>
 				<div class="product__box">
 					<div class="product__item outline"><a href="ProductDetail.html">
-						<div class="product__item--img"><img src="./img/img1.jpg"></div>
-						<div class="product__item--name">Nước Hoa Louis Vuitton Heures DAbsence EDP</div>
+						<div class="product__item--img"><img src="./img/img8.jpg"></div>
+						<div class="product__item--name">Nước Hoa Dior Sauvage Elixir EDP</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
 					</a></div>
 					<div class="product__item outline"><a href="ProductDetail.html">
 						<div class="product__item--img"><img src="./img/img3.jpg"></div>
-						<div class="product__item--name">Nước Hoa Dior Miss Dior EDT</div>
+						<div class="product__item--name">Nước Hoa Louis Vuitton Heures DAbsence 2</div>
 						<div class="product__item--price">727.000đ-1.727.000đ</div>
 						<div class="product__item--size">3 size</div>
 						<div class="product__item--rating ">★★★★★</div>
