--- a/button2.html
+++ b/button2.html
@@ -345,9 +345,9 @@
 							<li>
 								<h3>Information</h3>
 							</li>
-							<li><a href="Introduction.html">About</a></li>
-							<li><a href="ProductPage.html">Product</a></li>
-							<li><a href="">Blog</a></li>
+							<li><a href="index.html">About</a></li>
+							<li><a href="index.html">Product</a></li>
+							<li><a href="index.html">Blog</a></li>
 						</ul>
 
 					</div>
@@ -356,9 +356,9 @@
 							<li>
 								<h3>Company</h3>
 							</li>
-							<li><a href="https://www.google.com">Community</a></li>
-							<li><a href="">Career</a></li>
-							<li><a href="Introduction.html">Our story</a></li>
+							<li><a href="index.html">Community</a></li>
+							<li><a href="index.html">Career</a></li>
+							<li><a href="index.html">Our story</a></li>
 						</ul>
 					</div>
 					<div class="footer__right--contact">
@@ -366,9 +366,9 @@
 							<li>
 								<h3>Contact</h3>
 							</li>
-							<li><a href="Contact.html">Getting Started</a></li>
-							<li><a href="">Pricing</a></li>
-							<li><a href="">Resources</a></li>
+							<li><a href="index.html">Getting Started</a></li>
+							<li><a href="index.html">Pricing</a></li>
+							<li><a href="index.html">Resources</a></li>
 						</ul>
 					</div>
 				</div>
