--- a/Orderpage.html
+++ b/Orderpage.html
@@ -149,9 +149,9 @@
 						<li>
 							<h3>Information</h3>
 						</li>
-						<li><a href="">About</a></li>
-						<li><a href="">Product</a></li>
-						<li><a href="">Blog</a></li>
+						<li><a href="index.html">About</a></li>
+						<li><a href="index.html">Product</a></li>
+						<li><a href="index.html">Blog</a></li>
 					</ul>
 
 				</div>
@@ -160,9 +160,9 @@
 						<li>
 							<h3>Company</h3>
 						</li>
-						<li><a href="">Community</a></li>
-						<li><a href="">Career</a></li>
-						<li><a href="">Our story</a></li>
+						<li><a href="index.html">Community</a></li>
+						<li><a href="index.html">Career</a></li>
+						<li><a href="index.html">Our story</a></li>
 					</ul>
 				</div>
 				<div class="footer__right--contact">
@@ -170,9 +170,9 @@
 						<li>
 							<h3>Contact</h3>
 						</li>
-						<li><a href="">Getting Started</a></li>
-						<li><a href="">Pricing</a></li>
-						<li><a href="">Resources</a></li>
+						<li><a href="index.html">Getting Started</a></li>
+						<li><a href="index.html">Pricing</a></li>
+						<li><a href="index.html">Resources</a></li>
 					</ul>
 				</div>
 			</div>
