--- a/indextrang3.html
+++ b/indextrang3.html
@@ -320,33 +320,39 @@
 						<a href="https://www.twitter.com"><button class="footer__left--socialbtn"><img src="svg/twitter.svg"></img></button></a>
 					</div>
 				</div>
-				<div class="footer__right">	
+				<div class="footer__right">
 					<div class="footer__right--information">
-					<ul>
-						<li><h3>Information</h3></li>
-						<li><a href="Introduction.html">About</a></li>
-						<li><a href="ProductPage.html">Product</a></li>
-						<li><a href="">Blog</a></li>
-					</ul>
+						<ul>
+							<li>
+								<h3>Information</h3>
+							</li>
+							<li><a href="index.html">About</a></li>
+							<li><a href="index.html">Product</a></li>
+							<li><a href="index.html">Blog</a></li>
+						</ul>
 
 					</div>
 					<div class="footer__right--company">
-					<ul>
-						<li><h3>Company</h3></li>
-						<li><a href="https://www.google.com">Community</a></li>
-						<li><a href="">Career</a></li>
-						<li><a href="Introduction.html">Our story</a></li>
-					</ul>
+						<ul>
+							<li>
+								<h3>Company</h3>
+							</li>
+							<li><a href="index.html">Community</a></li>
+							<li><a href="index.html">Career</a></li>
+							<li><a href="index.html">Our story</a></li>
+						</ul>
 					</div>
 					<div class="footer__right--contact">
-					<ul>
-						<li><h3>Contact</h3></li>
-						<li><a href="Contact.html">Getting Started</a></li>
-						<li><a href="">Pricing</a></li>
-						<li><a href="">Resources</a></li>
-					</ul>
+						<ul>
+							<li>
+								<h3>Contact</h3>
+							</li>
+							<li><a href="index.html">Getting Started</a></li>
+							<li><a href="index.html">Pricing</a></li>
+							<li><a href="index.html">Resources</a></li>
+						</ul>
 					</div>
-					</div>
+				</div>
 			</div>
 			<div class="footer__terms">2023 all Right Reserved Term of use Havuyi</div>
 		</div>
