--- a/Orderpage.html
+++ b/Orderpage.html
@@ -100,8 +100,8 @@
 
 			</div>
 			<div class="orderpage-button">
-				<button class="check-shipping-info" id="myBtn"><a href="Ordertt.html">Kiểm tra thông tin vận chuyển</a></button>
-				<button class="checkout"><a href="indexdangnhap.html">Thanh toán</a></button>
+				<a href="Ordertt.html">	<button class="check-shipping-info" id="myBtn">Kiểm tra thông tin vận chuyển</button></a>
+				<a href="indexdangnhap.html">	<button class="checkout">Thanh toán</button></a>
 			</div>
 		</div>
 
