--- a/baohanh.html
+++ b/baohanh.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="trangchu.html">Trang chủ</a></li>
+        <li><a href="index.html">Trang chủ</a></li>
         <li><a href="gioithieu.html">Giới thiệu</a></li>
-        <li><a href="dangnhap.html">Bảo hành</a></li>
-        <li><a href="dangky.html">Liên hệ</a></li>
+        <li><a href="baohanh.html">Bảo hành</a></li>
+        <li><a href="lienhe.html">Liên hệ</a></li>
     </ul>
     <div class="nav__logo">
         <div class="nav__logo--icon"> <img src="img/logo.png" alt="logo" class="nav__logo--icon"></div>
