--- a/binhluan.html
+++ b/binhluan.html
@@ -29,10 +29,10 @@
 			<div class="nav">
 				<div class="nav__link">
 					<ul>
-						<li><a>Trang Chủ</a></li>
-						<li><a>Giới Thiệu</a></li>
-						<li><a>Bảo Hành</a></li>
-						<li><a>Liên Hệ</a></li>
+						<li><a href="index.html">Trang chủ</a></li>
+						<li><a href="gioithieu.html">Giới thiệu</a></li>
+						<li><a href="baohanh.html">Bảo hành</a></li>
+						<li><a href="lienhe.html">Liên hệ</a></li>
 					</ul>
 					<ul>
 						<div class="user" >
