--- a/admin/quanlysanphamadmin2.html
+++ b/admin/quanlysanphamadmin2.html
@@ -16,6 +16,18 @@
     <script src="Product.js"> </script>
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
     <title>Admin Dashboard Panel</title> 
+    <script>
+      function hello() {
+          var result = confirm("Bạn có chắc không?");
+          if (result) {
+              alert("Thay đổi thành công!")
+          }
+          else {
+              alert("Đã hủy bỏ thay đổi")
+          }
+      }
+
+  </script>
 </head>
 <body>
     <div class="activemauden"></div>
@@ -270,8 +282,8 @@
                 <td>50ml</td>
                 <td>1.980.000đ</td>
                 <td >
-                <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>  </a> 
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -286,8 +298,8 @@
                 <td>50ml</td>
                 <td>6.910.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i></a>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -302,8 +314,8 @@
                 <td>50ml</td>
                 <td>3.750.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -318,8 +330,8 @@
                 <td>50ml</td>
                 <td>11.980.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i> </a>  
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -334,8 +346,8 @@
                 <td>50ml</td>
                 <td>4.720.000đ</td>
                 <td >
-                  <a href="suasanpham.html"><i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i></a>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
