--- a/admin/chinhsuanguoidung1.html
+++ b/admin/chinhsuanguoidung1.html
@@ -81,7 +81,7 @@
     </nav>
     <section class="menuadmin dashboard">
         <div class="top">
-            <i class="uil uil-bars sidebar-toggle"></i>
+           
 
             <div class="search-box">
                 <a href="search.html" class="uil uil-search"></a>
@@ -110,6 +110,6 @@
                     <option>Admin</option>
                 </select>
                 <br>
-                <button onclick="hello()" class="buttoon">Chỉnh sửa</button>
+                <a href="quanlydonhang.html"><button onclick="hello()" class="buttoon">Chỉnh sửa</button></a>
 
 <script src="Customer.js"></script>
