--- a/admin/quanlysanphamadmin2.html
+++ b/admin/quanlysanphamadmin2.html
@@ -18,12 +18,12 @@
     <title>Admin Dashboard Panel</title> 
     <script>
       function hello() {
-          var result = confirm("Bạn có chắc không?");
+        var result = confirm("Bạn có chắc muốn xóa không?");
           if (result) {
-              alert("Thay đổi thành công!")
+              alert("Xóa sản phẩm thành công!")
           }
           else {
-              alert("Đã hủy bỏ thay đổi")
+              alert("Đã hủy bỏ xoá sản phẩm")
           }
       }
 
