--- a/admin/suasanpham.html
+++ b/admin/suasanpham.html
@@ -241,7 +241,7 @@
           <button class="imgdel2">xóa hình 2</button>
           <button class="imgdel3">xóa hình 3</button>
         </div>
-          <button class="btn btn-primaryedit"><a href="quanlysanphamadmin.html">Chỉnh sửa sản phẩm</a></button>
+          <button class="btn btn-primaryedit" onclick="suaa()">Chỉnh sửa sản phẩm</button>
         </form>
       </div>
       <section class="menuadmin addProduct" style="display: block;">
@@ -276,8 +276,8 @@
                 <td>50ml</td>
                 <td>1.980.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -292,8 +292,8 @@
                 <td>50ml</td>
                 <td>6.910.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -308,8 +308,8 @@
                 <td>50ml</td>
                 <td>3.750.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -324,8 +324,8 @@
                 <td>50ml</td>
                 <td>11.980.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -340,8 +340,8 @@
                 <td>50ml</td>
                 <td>4.720.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
