--- a/admin/themsanpham.html
+++ b/admin/themsanpham.html
@@ -157,7 +157,7 @@
           <img src="./img/defaultimg.png" alt="" class="imgpreview">
           <img src="./img/defaultimg.png" alt="" class="imgpreview">
           <img src="./img/defaultimg.png" alt="" class="imgpreview">
-          <button class="btn btn-primary"><a href="quanlysanphamadmin.html">Thêm Sản Phẩm</a></button>
+          <button class="btn btn-primary" onclick="themm()">Thêm Sản Phẩm</button>
         </form>
       </div>
     
@@ -276,8 +276,8 @@
                 <td>50ml</td>
                 <td>1.980.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -292,8 +292,8 @@
                 <td>50ml</td>
                 <td>6.910.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -308,8 +308,8 @@
                 <td>50ml</td>
                 <td>3.750.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -324,8 +324,8 @@
                 <td>50ml</td>
                 <td>11.980.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
@@ -340,8 +340,8 @@
                 <td>50ml</td>
                 <td>4.720.000đ</td>
                 <td >
-                <i class="fa-solid fa-pen-to-square edit"style="color:#00ff1e" ></i>   
-                <i class="fa-solid fa-trash delete" style="color: #ee3158;"></i> 
+                  <a href="suasanpham.html"><img src="img/suachua.jpg" style="width: 15%; height: 15%;margin-bottom: 9px;"> </a>  
+                  <i> <img src="img/thungrac.jpg" style="width: 30%; height: 40%;" onclick="hello()"></i> 
                 </td>
               </tr>
           </tbody>
