--- a/admin/suasanpham.html
+++ b/admin/suasanpham.html
@@ -233,13 +233,13 @@
             <input type="text" class="form-control editdescriptions" placeholder="Nhập mô tả chi tiết cho sản phẩm" value="sản phẩm được tìm ra năm 1982">
           </div>
           <input type="file" id="editimg" name="img" accept="image/*" multiple>
-          <img src="./img/defaultimg.png" alt="" class="imgpreview">
-          <img src="./img/defaultimg.png" alt="" class="imgpreview">
-          <img src="./img/defaultimg.png" alt="" class="imgpreview">
+         <img src="./img/img1.jpg" alt="" class="imgpreview">
+          <img src="./img/img3.jpg" alt="" class="imgpreview">
+        <img src="./img/img5.jpg" alt="" class="imgpreview">
           <div class="imgdel">
-          <button class="imgdel1">xóa hình 1</button>
-          <button class="imgdel2">xóa hình 2</button>
-          <button class="imgdel3">xóa hình 3</button>
+            <a href="suasanpham.html"> <button class="imgdel1">xóa hình 1</button></a>
+          <a href="suasanpham.html"> <button class="imgdel2">xóa hình 2</button></a>
+          <a href="suasanpham.html"> <button class="imgdel3">xóa hình 3</button></a>
         </div>
           <button class="btn btn-primaryedit" onclick="suaa()">Chỉnh sửa sản phẩm</button>
         </form>
