--- a/Ordertt.html
+++ b/Ordertt.html
@@ -118,7 +118,7 @@
 					<input type="text" class="sdt" placeholder="nhập số điện thoại" value="0909090909">
 					<p class="listMes">err</p>
 					<label for="address"><b>Địa chỉ</b></label>
-					<input type="text" class="diachi" placeholder="nhập địa chỉ" value="123 abc quận e phường f0909090909">
+					<input type="text" class="diachi" placeholder="nhập địa chỉ" value="123 abc quận e phường f">
 					<p class="listMes">err</p>
 				</div>
 
