--- a/indexfind.html
+++ b/indexfind.html
@@ -194,7 +194,7 @@
 				<li></li>
 			</ul>
 		</div>
-		<div class="ket-qua">kết quả tìm thấy</div>
+		<div class="ket-qua">Kết quả tìm thấy</div>
 		<div class="product parent" style="margin-top: 0;">
 			<div class="child">
 				<div class="product__filter outline">
