--- a/HisOrder.html
+++ b/HisOrder.html
@@ -60,21 +60,21 @@
 		  <td>22-03-2022</td>
 		  <td>COD (nhận tiền mặt khi giao hàng)</td>
 		  <td>789098767đ</td>
-		 <a href="chitiethis.html"> <td>Chi Tiết</td></a>
+		  <td><a href="chitiethis.html">Chi Tiết</a></td>
 		</tbody>
         <tbody class="productordered">
             <td>002</td>
             <td>12-05-2023</td>
             <td>Chuyển Khoản(momo)</td>
             <td>909090đ</td>
-			<a href="chitiethis.html"> 	<td>Chi Tiết</td></a>
+			<td><a href="chitiethis.html">Chi Tiết</a></td>
           </tbody>
           <tbody class="productordered">
             <td>003</td>
             <td>01-08-2023</td>
             <td>COD (nhận tiền mặt khi giao hàng)</td>
             <td>12345678đ</td>
-			<a href="chitiethis.html"> 	<td>Chi Tiết</td></a>
+			<td><a href="chitiethis.html">Chi Tiết</a></td>
           </tbody>
 	  </table>
 
