--- a/admin/trangthai.html
+++ b/admin/trangthai.html
@@ -113,7 +113,7 @@
     <td>1.727.000đ</td>
     <td>Vinh Chấn Lưu</td>
     <td>22/11/2023</td>
-    <td>Đã xử lý<a href="trangthai.html"><button>Thay đổi trạng thái</button></a></td>
+    <td>Chưa xử lý<a href="quanlydonhang.html"><button>Thay đổi trạng thái</button></a></td>
     <td><a href="../chitiethis.html"><button>Chi tiết</button></a></td>
   </tr>
   <tr>
@@ -122,7 +122,7 @@
     <td>727.000đ</td>
     <td>Vinh Chấn Lưu</td>
     <td>22/11/2023</td>
-    <td>Đã xử lý<a href="trangthai.html"><button>Thay đổi trạng thái</button></a></td>
+    <td>Chưa xử lý<a href="quanlydonhang.html"><button>Thay đổi trạng thái</button></a></td>
     <td><a href="../chitiethis.html"><button>Chi tiết</button></a></td>
   </tr>
   <tr>
@@ -131,7 +131,7 @@
     <td>727.000đ</td>
     <td>Vinh Chấn Lưu</td>
     <td>22/11/2023</td>
-    <td>Đã xử lý<a href="trangthai.html"><button>Thay đổi trạng thái</button></a></td>
+    <td>Chưa xử lý<a href="quanlydonhang.html"><button>Thay đổi trạng thái</button></a></td>
     <td><a href="../chitiethis.html"><button>Chi tiết</button></a></td>
   </tr>
   <tr>
@@ -140,7 +140,7 @@
     <td>727.000đ</td>
     <td>Hào Long</td>
     <td>25/11/2023</td>
-    <td>Chưa xử lý<a href="trangthai.html"><button>Thay đổi trạng thái</button></a></td>
+    <td>Đã xử lý<a href="quanlydonhang.html"><button>Thay đổi trạng thái</button></a></td>
     <td><a href="../chitiethis.html"><button>Chi tiết</button></a></td>
   </tr>
   <tr>
@@ -149,7 +149,7 @@
     <td>1.727.000đ</td>
     <td>Hào Long</td>
     <td>25/11/2023</td>
-    <td>Chưa xử lý<a href="trangthai.html"><button>Thay đổi trạng thái</button></a></td>
+    <td>Đã xử lý<a href="quanlydonhang.html"><button>Thay đổi trạng thái</button></a></td>
     <td><a href="../chitiethis.html"><button>Chi tiết</button></a></td>
   </tr>
   <tr>
@@ -158,7 +158,7 @@
     <td>727.000đ</td>
     <td>Thầy Thanh đẹp trai</td>
     <td>7/12/2023</td>
-    <td>Đã xử lý <a href="trangthai.html"><button>Thay đổi trạng thái</button></a></td>
+    <td>Chưa xử lý <a href="quanlydonhang.html"><button>Thay đổi trạng thái</button></a></td>
     <td><a href="../chitiethis.html"><button>Chi tiết</button></a></td>
   </tr>
 </table>
