--- a/admin/chinhsuanguoidung2.html
+++ b/admin/chinhsuanguoidung2.html
@@ -110,6 +110,6 @@
                     <option>Admin</option>
                 </select>
                 <br>
-                <a href="quanlydonhang.html"><button onclick="hello()" class="buttoon">Chỉnh sửa</button></a>
+                <a href="quanlynguoidung.html"><button onclick="hello()" class="buttoon">Chỉnh sửa</button></a>
 
 <script src="Customer.js"></script>
