--- a/ProductDetail3.html
+++ b/ProductDetail3.html
@@ -268,7 +268,7 @@
 	<div class="footer__box">
 		<div class="child">
 			<div class="footer__left">
-				<div class="footer__left--name">Porfumelus</div>
+				<div class="footer__left--name">Havuyi</div>
 				<div class="footer__left--slogan">Kích thích mọi giác quan<br> với hương thơm đẳng cấp.</div>
 				<div class="footer__left--social">
 					
@@ -311,7 +311,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
+		<div class="footer__terms">2023 all Right Reserved Term of use Havuyi</div>
 	</div>
 </div>
 <!-- <script  src="index.js"></script>
