--- a/chitiethis.html
+++ b/chitiethis.html
@@ -175,7 +175,7 @@
 			</div>
 		</div>
 		<div class="child">
-			<div class="footer__terms">2023 all Right Reserved Term of use Porfumelus</div>
+			<div class="footer__terms">2023 all Right Reserved Term of use Havuyi</div>
 		</div>
 	</div>
 	<!-- Footer ENDS -->
